--- a/LeaveManagement.Web/appsettings.json
+++ b/LeaveManagement.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=LeaveManagementNet6;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=LeaveManagementNet6;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Serilog": {
     "MinimumLevel": {
