--- a/LeaveManagement.Web/appsettings.json
+++ b/LeaveManagement.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=LeaveManagementNet6;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:mytestserver3.database.windows.net,1433;Initial Catalog=LeaveManagementWeb-Net6;Persist Security Info=False;User ID=kle;Password=Abc12345;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Serilog": {
     "MinimumLevel": {
