--- a/LeaveManagement.Web/appsettings.Production.json
+++ b/LeaveManagement.Web/appsettings.Production.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=LeaveManagementNet6;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:mytestserver3.database.windows.net,1433;Initial Catalog=LeaveManagementWeb-Net6;Persist Security Info=False;User ID=kle;Password=Abc12345;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
